// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change the selection when a selectable node is clicked 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-17"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        Tree
      </h6>
      <div
        class="makeStyles-subscribers-18"
      />
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiTreeView-root"
      role="tree"
    >
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-20"
            >
              <img
                alt="Node-1"
                height="16"
                src="http://localhost/node.svg"
                title="Node-1"
                width="16"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-1
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-20"
                    >
                      <img
                        alt="Node-1.1"
                        height="16"
                        src="http://localhost/node.svg"
                        title="Node-1.1"
                        width="16"
                      />
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.1
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-20"
                    >
                      <img
                        alt="Node-1.2"
                        height="16"
                        src="http://localhost/node.svg"
                        title="Node-1.2"
                        width="16"
                      />
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.2
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
      <li
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          />
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-20"
            >
              <img
                alt="Node-2"
                height="16"
                src="http://localhost/node.svg"
                title="Node-2"
                width="16"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-2
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            />
          </div>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should collapse/expand a non-selectable node when clicked 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-21"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        Tree
      </h6>
      <div
        class="makeStyles-subscribers-22"
      />
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiTreeView-root"
      role="tree"
    >
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-24"
            >
              <img
                alt="Node-1"
                height="16"
                src="http://localhost/node.svg"
                title="Node-1"
                width="16"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-1
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                aria-expanded="true"
                class="MuiTreeItem-root Mui-expanded"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-24"
                    >
                      <img
                        alt="Node-1.1"
                        height="16"
                        src="http://localhost/node.svg"
                        title="Node-1.1"
                        width="16"
                      />
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.1
                      </p>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <li
                        class="MuiTreeItem-root"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          />
                          <div
                            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-label-24"
                            >
                              <img
                                alt="Node-1.1.1"
                                height="16"
                                src="http://localhost/node.svg"
                                title="Node-1.1.1"
                                width="16"
                              />
                              <p
                                class="MuiTypography-root MuiTypography-body1"
                              >
                                Node-1.1.1
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
            </div>
          </div>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should correctly interpret the order of nodes with the same parent in the flat nodes list 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-9"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        Deep Tree
      </h6>
      <div
        class="makeStyles-subscribers-10"
      />
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiTreeView-root"
      role="tree"
    >
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-12"
            >
              <img
                alt="Node-2"
                height="16"
                src="http://localhost/node.svg"
                title="Node-2"
                width="16"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-2
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-12"
                    >
                      <img
                        alt="Node-2.1"
                        height="16"
                        src="http://localhost/node.svg"
                        title="Node-2.1"
                        width="16"
                      />
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-2.1
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-12"
            >
              <img
                alt="Node-1"
                height="16"
                src="http://localhost/node.svg"
                title="Node-1"
                width="16"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-1
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                aria-expanded="true"
                class="MuiTreeItem-root Mui-expanded"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-12"
                    >
                      <img
                        alt="Node-1.1"
                        height="16"
                        src="http://localhost/node.svg"
                        title="Node-1.1"
                        width="16"
                      />
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.1
                      </p>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <li
                        class="MuiTreeItem-root"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          />
                          <div
                            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-label-12"
                            >
                              <img
                                alt="Node-1.1.2"
                                height="16"
                                src="http://localhost/node.svg"
                                title="Node-1.1.2"
                                width="16"
                              />
                              <p
                                class="MuiTypography-root MuiTypography-body1"
                              >
                                Node-1.1.2
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li
                        class="MuiTreeItem-root"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          />
                          <div
                            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-label-12"
                            >
                              <img
                                alt="Node-1.1.1"
                                height="16"
                                src="http://localhost/node.svg"
                                title="Node-1.1.1"
                                width="16"
                              />
                              <p
                                class="MuiTypography-root MuiTypography-body1"
                              >
                                Node-1.1.1
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
              <li
                aria-expanded="true"
                class="MuiTreeItem-root Mui-expanded"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-12"
                    >
                      <img
                        alt="Node-1.3"
                        height="16"
                        src="http://localhost/node.svg"
                        title="Node-1.3"
                        width="16"
                      />
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.3
                      </p>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <li
                        aria-expanded="true"
                        class="MuiTreeItem-root Mui-expanded"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                              />
                            </svg>
                          </div>
                          <div
                            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-label-12"
                            >
                              <img
                                alt="Node-1.3.1"
                                height="16"
                                src="http://localhost/node.svg"
                                title="Node-1.3.1"
                                width="16"
                              />
                              <p
                                class="MuiTypography-root MuiTypography-body1"
                              >
                                Node-1.3.1
                              </p>
                            </div>
                          </div>
                        </div>
                        <ul
                          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
                          role="group"
                          style="min-height: 0px;"
                        >
                          <div
                            class="MuiCollapse-wrapper"
                          >
                            <div
                              class="MuiCollapse-wrapperInner"
                            >
                              <li
                                class="MuiTreeItem-root"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="MuiTreeItem-content"
                                >
                                  <div
                                    class="MuiTreeItem-iconContainer"
                                  />
                                  <div
                                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                                  >
                                    <div
                                      class="makeStyles-label-12"
                                    >
                                      <img
                                        alt="Node-1.3.1.1"
                                        height="16"
                                        src="http://localhost/node.svg"
                                        title="Node-1.3.1.1"
                                        width="16"
                                      />
                                      <p
                                        class="MuiTypography-root MuiTypography-body1"
                                      >
                                        Node-1.3.1.1
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </li>
                              <li
                                class="MuiTreeItem-root"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="MuiTreeItem-content"
                                >
                                  <div
                                    class="MuiTreeItem-iconContainer"
                                  />
                                  <div
                                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                                  >
                                    <div
                                      class="makeStyles-label-12"
                                    >
                                      <img
                                        alt="Node-1.3.1.2"
                                        height="16"
                                        src="http://localhost/node.svg"
                                        title="Node-1.3.1.2"
                                        width="16"
                                      />
                                      <p
                                        class="MuiTypography-root MuiTypography-body1"
                                      >
                                        Node-1.3.1.2
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </li>
                            </div>
                          </div>
                        </ul>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-12"
                    >
                      <img
                        alt="Node-1.2"
                        height="16"
                        src="http://localhost/node.svg"
                        title="Node-1.2"
                        width="16"
                      />
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.2
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should only expand the specified nodes on initial render 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-13"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        Deep Tree
      </h6>
      <div
        class="makeStyles-subscribers-14"
      />
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiTreeView-root"
      role="tree"
    >
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-16"
            >
              <img
                alt="Node-1"
                height="16"
                src="http://localhost/node.svg"
                title="Node-1"
                width="16"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-1
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                aria-expanded="false"
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-16"
                    >
                      <img
                        alt="Node-1.1"
                        height="16"
                        src="http://localhost/node.svg"
                        title="Node-1.1"
                        width="16"
                      />
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.1
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-16"
                    >
                      <img
                        alt="Node-1.2"
                        height="16"
                        src="http://localhost/node.svg"
                        title="Node-1.2"
                        width="16"
                      />
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.2
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-expanded="false"
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-16"
                    >
                      <img
                        alt="Node-1.3"
                        height="16"
                        src="http://localhost/node.svg"
                        title="Node-1.3"
                        width="16"
                      />
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.3
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-16"
            >
              <img
                alt="Node-2"
                height="16"
                src="http://localhost/node.svg"
                title="Node-2"
                width="16"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-2
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-16"
                    >
                      <img
                        alt="Node-2.1"
                        height="16"
                        src="http://localhost/node.svg"
                        title="Node-2.1"
                        width="16"
                      />
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-2.1
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render a multi-level tree correctly 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-5"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        Deep Tree
      </h6>
      <div
        class="makeStyles-subscribers-6"
      />
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiTreeView-root"
      role="tree"
    >
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-8"
            >
              <img
                alt="Node-1"
                height="16"
                src="http://localhost/node.svg"
                title="Node-1"
                width="16"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-1
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                aria-expanded="true"
                class="MuiTreeItem-root Mui-expanded"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-8"
                    >
                      <img
                        alt="Node-1.1"
                        height="16"
                        src="http://localhost/node.svg"
                        title="Node-1.1"
                        width="16"
                      />
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.1
                      </p>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <li
                        class="MuiTreeItem-root"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          />
                          <div
                            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-label-8"
                            >
                              <img
                                alt="Node-1.1.1"
                                height="16"
                                src="http://localhost/node.svg"
                                title="Node-1.1.1"
                                width="16"
                              />
                              <p
                                class="MuiTypography-root MuiTypography-body1"
                              >
                                Node-1.1.1
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li
                        class="MuiTreeItem-root"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          />
                          <div
                            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-label-8"
                            >
                              <img
                                alt="Node-1.1.2"
                                height="16"
                                src="http://localhost/node.svg"
                                title="Node-1.1.2"
                                width="16"
                              />
                              <p
                                class="MuiTypography-root MuiTypography-body1"
                              >
                                Node-1.1.2
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-8"
                    >
                      <img
                        alt="Node-1.2"
                        height="16"
                        src="http://localhost/node.svg"
                        title="Node-1.2"
                        width="16"
                      />
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.2
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-expanded="true"
                class="MuiTreeItem-root Mui-expanded"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-8"
                    >
                      <img
                        alt="Node-1.3"
                        height="16"
                        src="http://localhost/node.svg"
                        title="Node-1.3"
                        width="16"
                      />
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.3
                      </p>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <li
                        aria-expanded="true"
                        class="MuiTreeItem-root Mui-expanded"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                              />
                            </svg>
                          </div>
                          <div
                            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-label-8"
                            >
                              <img
                                alt="Node-1.3.1"
                                height="16"
                                src="http://localhost/node.svg"
                                title="Node-1.3.1"
                                width="16"
                              />
                              <p
                                class="MuiTypography-root MuiTypography-body1"
                              >
                                Node-1.3.1
                              </p>
                            </div>
                          </div>
                        </div>
                        <ul
                          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
                          role="group"
                          style="min-height: 0px;"
                        >
                          <div
                            class="MuiCollapse-wrapper"
                          >
                            <div
                              class="MuiCollapse-wrapperInner"
                            >
                              <li
                                class="MuiTreeItem-root"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="MuiTreeItem-content"
                                >
                                  <div
                                    class="MuiTreeItem-iconContainer"
                                  />
                                  <div
                                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                                  >
                                    <div
                                      class="makeStyles-label-8"
                                    >
                                      <img
                                        alt="Node-1.3.1.1"
                                        height="16"
                                        src="http://localhost/node.svg"
                                        title="Node-1.3.1.1"
                                        width="16"
                                      />
                                      <p
                                        class="MuiTypography-root MuiTypography-body1"
                                      >
                                        Node-1.3.1.1
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </li>
                              <li
                                class="MuiTreeItem-root"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="MuiTreeItem-content"
                                >
                                  <div
                                    class="MuiTreeItem-iconContainer"
                                  />
                                  <div
                                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                                  >
                                    <div
                                      class="makeStyles-label-8"
                                    >
                                      <img
                                        alt="Node-1.3.1.2"
                                        height="16"
                                        src="http://localhost/node.svg"
                                        title="Node-1.3.1.2"
                                        width="16"
                                      />
                                      <p
                                        class="MuiTypography-root MuiTypography-body1"
                                      >
                                        Node-1.3.1.2
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </li>
                            </div>
                          </div>
                        </ul>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
            </div>
          </div>
        </ul>
      </li>
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-8"
            >
              <img
                alt="Node-2"
                height="16"
                src="http://localhost/node.svg"
                title="Node-2"
                width="16"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-2
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-8"
                    >
                      <img
                        alt="Node-2.1"
                        height="16"
                        src="http://localhost/node.svg"
                        title="Node-2.1"
                        width="16"
                      />
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-2.1
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render the tree 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-1"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        Default Tree
      </h6>
      <div
        class="makeStyles-subscribers-2"
      />
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiTreeView-root"
      role="tree"
    >
      <li
        class="MuiTreeItem-root"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          />
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-4"
            >
              <img
                alt="Node-root1"
                height="16"
                src="http://localhost/node.svg"
                title="Node-root1"
                width="16"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-root1
              </p>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
